# Area

./: README.md  docker-compose.yml
backend/: Makefile
backend/go/: .env.example  Dockerfile  area-list.json  go.mod  go.sum
backend/go/docs/: about.go  docs.go  swagger.json  swagger.yaml
backend/proto/: core.proto  discord_action_service.proto  dropbox_reaction_service.proto  ethereum_action_service.proto  github_reaction_service.proto  gmail_action_service.proto  http_action_service.proto  linkedin_reaction_service.proto  miro_reaction_service.proto  notion_reaction_service.proto  pmodel.proto  spotify_action_service.proto  twitch_reaction_service.proto  twitter_reaction_service.proto
backend/protogen/: github_reaction_service.pb.go  pmodel.pb.go
backend/rust/HTTPService/: Cargo.toml  build.rs
backend/rust/HTTPService/src/: server.rs
front-mobile/: .gitignore  App.tsx  Dockerfile  app.json  env.d.tsx  global.json  package.json  services.json
front-mobile/Functions/: Redirection.tsx  handleOpenURL.tsx  tokenUtils.tsx
front-mobile/android/: settings.gradle
front-mobile/android/app/: build.gradle
front-mobile/assets/: logo-discord.jsx  logo-dropbox.jsx  logo-ethereum.jsx  logo-facebook.jsx  logo-github.jsx  logo-gmail.jsx  logo-google.jsx  logo-http.jsx  logo-linkedin.jsx  logo-miro.jsx  logo-notion.jsx  logo-slack.jsx  logo-spotify.jsx  logo-twitch.jsx  logo-twitter.jsx
front-mobile/page/: LobbyPage.tsx
webClientSvelte/: Dockerfile  package-lock.json  package.json  vite.config.ts
webClientSvelte/src/: App.svelte  app.css
(+143 files in other folders)
